// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CxOffcanvas customize and event on click backdrop 1`] = `
<div>
  <div
    class="offcanvas offcanvas-end show bazinga"
    role="dialog"
    style="visibility: visible;"
    tabindex="-1"
  >
    Test
  </div>
  <div
    class="offcanvas-backdrop fade show"
  />
</div>
`;

exports[`CxOffcanvas customize and event on keypress 1`] = `
<div>
  <div
    class="offcanvas offcanvas-end show bazinga"
    role="dialog"
    style="visibility: visible;"
    tabindex="-1"
  >
    Test
  </div>
  <div
    class="offcanvas-backdrop fade show"
  />
</div>
`;

exports[`CxOffcanvas customize one 1`] = `
<div>
  <div
    class="offcanvas offcanvas-start bazinga"
    role="dialog"
    style="visibility: hidden;"
    tabindex="-1"
  >
    Test
  </div>
</div>
`;

exports[`loads and displays CxOffcanvas component 1`] = `<div />`;
